# click7

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: clean.xcf  index.html
assets/raw/: Siebensegment.pptx
src/: cli.rs  img_gen.rs  main.rs  routes.rs  store.rs
src/kv_store/: mod.rs
