[package]
name = "click7"
version = "0.2.0"
edition = "2021"
description = "website click counter with 7 segment display"
homepage = "https://github.com/lquenti/click7"
repository = "https://github.com/lquenti/click7"
license = "MIT"
authors = ["Lars Quentin <lars@lquenti.de>"]
readme = "./README.md"

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.8"
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["full"] }
